# indic-voice-cloning

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  findings.md  indicf5_test.py  pyproject.toml  research-log.md  research-state.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md
.planning/debug/: indicf5-ckpt-path-error.md
.planning/phases/01-benchmark-harness/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-indicf5-module/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md
.planning/phases/03-cli-integration/: 03-00-VERIFICATION.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md
.planning/phases/04-dependency-cleanup/: 04-01-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
benchmark/: compare_pipelines.py  report.py
benchmark/data/: loader.py  sentences.py  speakers.py
benchmark/metrics/: __init__.py  rtf.py  similarity.py  wer.py
benchmark/pipelines/: __init__.py  current.py  indicf5_stub.py
literature/: survey.md
src/indic_voice/: cli.py
src/indic_voice/models/: checkpoint_manager.py  tone_transfer.py
src/indic_voice/pipeline/: asr.py  translator.py  tts_indicf5.py  tts_sarvam.py
tests/: conftest.py  test_asr.py  test_checkpoint_manager.py  test_cli.py  test_tone_transfer.py  test_translator.py  test_tts_indicf5.py  test_tts_sarvam.py
tests/benchmark/: test_compare_pipelines.py  test_loader.py  test_metrics.py
