[project]
name = "indic-voice"
version = "0.1.0"
description = "Zero-shot Indic voice cloning and S2ST pipeline using IndicF5, Whisper, and Google Translate"
authors = [{name = "Harsha", email = "harsha@example.com"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["voice-cloning", "tts", "asr", "indic", "hindi", "tamil", "telugu", "f5-tts", "indicf5"]
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",
    "faster-whisper>=1.0.1",
    "deep-translator>=1.11.4",
    "torch>=2.0.0",
    "numpy<=1.26.4",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "huggingface_hub>=0.20.0",
    "pydub>=0.25.1",
    "transformers==4.49.0",
    "torchaudio>=2.0.0",
    "accelerate>=0.33.0",
    "torchcodec>=0.9.1",
    "f5-tts>=1.1.7",
]
requires-python = ">=3.9,<3.13"

[project.scripts]
indic-voice = "indic_voice.cli:app"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
